<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    tools:context=".AboutUsBaseActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="?attr/colorPrimary">
        <TextView
            android:id="@+id/toolbar_title_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_us"
            android:textColor="#ffffff"
            android:textSize="18sp"/>
    </androidx.appcompat.widget.Toolbar>
    <ImageView
        android:id="@+id/ic_launcher_about"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/ic_launcher"
        android:layout_below="@+id/toolbar_about"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>
    <TextView
        android:id="@+id/app_name_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:textColor"
        android:layout_below="@+id/ic_launcher_about"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:text="@string/app_name"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/version_name_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name_about"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>
    <RelativeLayout
        android:id="@+id/features_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_below="@+id/version_name_about">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/features_about"
            android:textColor="?android:textColor"
            android:textSize="14sp"
            android:layout_marginStart="20dp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_to"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/check_new_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_below="@+id/features_about">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/check_new_about"
            android:textColor="?android:textColor"
            android:textSize="14sp" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_to"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textSize="12sp"
        android:textAlignment="center"
        android:text="@string/warning_info_about"/>
</RelativeLayout>